--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -110,7 +110,7 @@ paths:
         "500":
           $ref: "#/components/responses/trait_500"
 
-  /inventory-import/channels/{id}/import:
+  /inventory-import/channels/{id}/upload:
     parameters:
       - $ref: "#/components/parameters/okapi_tenant"
       - $ref: "#/components/parameters/okapi_token"
@@ -128,7 +128,7 @@ paths:
         schema:
           type: string
     post:
-      operationId: importXmlRecords
+      operationId: uploadXmlRecords
       description: Load XML document to given import channel
       requestBody:
         content:
@@ -1158,6 +1158,10 @@ components:
         id:
           type: string
           description: Unique identifier (UUID) for the configuration.
+        tag:
+          type: string
+          pattern: "^[A-Za-z0-9-_]{1,24}$"
+          description: Optional, unique identifier that can be used instead of the UUID in channel operations
         name:
           type: string
           description: A name for the configuration.
