MODINVUP-128-imports style check

--- a/pom.xml
+++ b/pom.xml
@@ -486,6 +486,7 @@
           <sourceDirectories>
             <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
           </sourceDirectories>
+          <excludes>**/updating/**</excludes>
         </configuration>
         <executions>
           <execution>
