MODINVIMP-43 Add test coverage, bug fixes

--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -92,8 +92,8 @@ paths:
               $ref: "#/components/schemas/channel"
         required: true
       responses:
-        "204":
-          description:  No content
+        "200":
+          description:  OK
         "400":
           $ref: "#/components/responses/trait_400"
         "404":
