--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -119,7 +119,7 @@ paths:
       - in: path
         name: id
         required: true
-        description: Channel identifier (UUID)
+        description: Channel identifier
         schema:
           type: string
       - in: query
@@ -155,7 +155,7 @@ paths:
       - in: path
         name: id
         required: true
-        description: Channel identifier (UUID)
+        description: Channel identifier
         schema:
           type: string
       - in: query
@@ -191,7 +191,7 @@ paths:
       - in: path
         name: id
         required: true
-        description: Channel identifier (UUID)
+        description: Channel identifier
         schema:
           type: string
       - in: query
@@ -221,7 +221,7 @@ paths:
       - in: path
         name: id
         required: true
-        description: Import channel identifier (UUID)
+        description: Import channel identifier
         schema:
           type: string
     post:
@@ -245,7 +245,7 @@ paths:
       - in: path
         name: id
         required: true
-        description: Channel identifier (UUID)
+        description: Channel identifier
         schema:
           type: string
     post:
@@ -269,7 +269,7 @@ paths:
       - in: path
         name: id
         required: true
-        description: Channel identifier (UUID)
+        description: Channel identifier
         schema:
           type: string
     post:
@@ -293,7 +293,7 @@ paths:
       - in: path
         name: id
         required: true
-        description: Channel identifier (UUID)
+        description: Channel identifier
         schema:
           type: string
     post:
@@ -612,6 +612,7 @@ paths:
         description: Step identifier
         schema:
           type: string
+          format: uuid
     get:
       operationId: getStep
       description: Get detailed transformation step definition record
@@ -667,6 +668,7 @@ paths:
         description: Step identifier
         schema:
           type: string
+          format: uuid
     get:
       operationId: getScript
       description: Get transformation step script
@@ -761,6 +763,7 @@ paths:
         description: Transformation pipeline identifier
         schema:
           type: string
+          format: uuid
     get:
       operationId: getTransformation
       description: Get transformation pipeline record
@@ -880,6 +883,7 @@ paths:
         description: Association identifier
         schema:
           type: string
+          format: uuid
     get:
       operationId: getTsa
       description: Get a transformation step association by ID
@@ -963,8 +967,8 @@ components:
       properties:
         id:
           type: string
-          description: >-
-            Unique identifier (UUID) for the transformation pipeline.
+          format: uuid
+          description: Unique identifier for the transformation pipeline.
         name:
           type: string
           description: Name of the transformation pipeline.
@@ -980,7 +984,8 @@ components:
             properties:
               id:
                 type: string
-                description: The ID (UUID) of the step at this position in the transformation pipeline.
+                format: uuid
+                description: The ID of the step at this position in the transformation pipeline.
               name:
                 type: string
                 description: The (unique) name of the step.
@@ -1004,8 +1009,8 @@ components:
       properties:
         id:
           type: string
-          description: >-
-            Unique identifier (UUID) for the transformation step.
+          format: uuid
+          description: Unique identifier for the transformation step.
         name:
           type: string
           description: A name assigned to the transformation step.
@@ -1048,12 +1053,15 @@ components:
       properties:
         id:
           type: string
-          description: Unique identifier (UUID) for the association.
+          format: uuid
+          description: Unique identifier for the association.
         stepId:
           type: string
+          format: uuid
           description: UUID referencing a transformation step.
         transformationId:
           type: string
+          format: uuid
           description: UUID referencing a transformation pipeline.
         position:
           type: string
@@ -1064,6 +1072,7 @@ components:
           properties:
             id:
               type: string
+              format: uuid
               description: Id of the step associated with a pipeline.
             name:
               type: string
@@ -1099,12 +1108,15 @@ components:
       properties:
         id:
           type: string
-          description: Unique identifier (UUID) for the log line.
+          format: uuid
+          description: Unique identifier for the log line.
         importJobId:
           type: string
+          format: uuid
           description: UUID referencing the import job that generated the log.
         channelId:
           type: string
+          format: uuid
           description: UUID referencing the channel configuration that governed the import job.
           readOnly: true
         channelName:
@@ -1138,12 +1150,15 @@ components:
       properties:
         id:
           type: string
-          description: Unique ID (UUID) for the error report.
+          format: uuid
+          description: Unique ID for the error report.
         importJobId:
           type: string
+          format: uuid
           description: UUID referencing the import job generation the report.
         channelId:
           type: string
+          format: uuid
           description: UUID referencing the configuration that defined the import job.
           readOnly: true
         channelName:
@@ -1209,7 +1224,8 @@ components:
       properties:
         id:
           type: string
-          description: Unique identifier (UUID) for the configuration.
+          format: uuid
+          description: Unique identifier for the configuration.
         name:
           type: string
           description: A name for the configuration.
@@ -1222,6 +1238,7 @@ components:
           description: Type of import channel, only bulk XML, 'XML', supported.
         transformationId:
           type: string
+          format: uuid
           description: UUID referencing the transformation pipeline to use.
         metadata:
           $ref: "#/components/schemas/metadata"
@@ -1244,12 +1261,14 @@ components:
       properties:
         id:
           type: string
-          description: 'Unique identifier (UUID) for the import job report.'
+          format: uuid
+          description: 'Unique identifier for the import job report.'
         channelName:
           type: string
           description: The name of the channel at the time of logging the import job.
         channelId:
           type: string
+          format: uuid
           description: UUID referencing the channel configuration that governed the import job run.
         importType:
           type: string
