--- a/pom.xml
+++ b/pom.xml
@@ -161,11 +161,25 @@
         <scope>runtime</scope>
     </dependency>
     <dependency>
+        <groupId>net.sf.saxon</groupId>
+        <artifactId>saxon</artifactId>
+        <version>8.7</version>
+    </dependency>
+    <dependency>
+        <groupId>net.sf.saxon</groupId>
+        <artifactId>saxon-dom</artifactId>
+        <version>8.7</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.18.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.ongres.scram</groupId>
+      <artifactId>client</artifactId>
+      <version>2.1</version>
+    </dependency>
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-reservoir-util</artifactId>
