Follow up fixes to import API schema
 transformationStepAssociation:  Remove left over parts (in schema and code) of deprecated legacy style IDs in

--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -1152,16 +1152,11 @@ components:
           description: The position of the step amongst other steps in the pipeline.
         metadata:
           $ref: "#/components/schemas/metadata"
+      required:
+        - stepId
+        - transformationId
+        - position
       additionalProperties: false
-      anyOf:
-        - required:
-          - stepId
-          - transformationId
-          - position
-        - required:
-          - step
-          - transformation
-          - position
     logLines:
       description: Job log statements as JSON.
       type: object
