--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -1307,6 +1307,8 @@ components:
         type:
           type: string
           description: Type of import channel, only bulk XML, 'XML', supported.
+          enum:
+            - XML
         enabled:
           type: boolean
           description: Set to true to indicate that the channel should be deployed for use.
