MODINVUP-137, handle instances with stubbed relations
  Preceding/succeeding instance relations can be created without actually containing an ID for an existing instance to relate to. This is causing a NPE in MIU.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.folio</groupId>
   <artifactId>mod-inventory-update</artifactId>
-  <version>4.0.0</version>
+  <version>4.0.1-SNAPSHOT</version>
   <name>Inventory Update Module</name>
 
   <licenses>
