--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -1310,7 +1310,7 @@ components:
         enabled:
           type: boolean
           description: Set to true to indicate that the channel should be deployed for use.
-        isCommissioned:
+        commissioned:
           type: boolean
           description: Indicates if the channel is actually deployed.
           readOnly: true
